--- a/day_1/homework.ipynb
+++ b/day_1/homework.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `Занятие 1.1: Основы Pytorch`\n",
+    "# `Домашнее задание 1: Основы Pytorch`\n",
     "\n",
     "#### `Сириус, смена \"Алгоритмы и анализ данных\" 2024`\n",
     "\n",
     "#### `Алексеев Илья, ММП ВМК МГУ`\n",
     "\n",
-    "Оригинальная (более сложная) версия:\n",
+    "Оригинальная (более сложная) версия домашки:\n",
     "- https://github.com/mmp-practicum-team/mmp_practicum_spring_2024/tree/main/Tasks/Task%2001.5"
    ]
   },
@@ -377,7 +377,7 @@
     "Скопируйте и перепишите функции `train_epoch`, `val_epoch`, `train_val` таким образом, чтобы\n",
     "- во время обучения раз в `logging_interval` шагов оптимизации выводились лосс и аккураси на одном батче (пример ниже, но не обязательно делать идентично)\n",
     "- происходило сохранение весов лучшей (по аккураси на валидации) модели и состояния оптимизатора ([в помощь](https://pytorch.org/tutorials/beginner/saving_loading_models.html#save-load-state-dict-recommended))\n",
-    "- в конце обучения выводился и сохранялся график-саммари (пример ниже, но не обязательно делать идентично)\n",
+    "- (при желании) в конце обучения выводился и сохранялся график-саммари (пример ниже, но не обязательно делать идентично)\n",
     "\n",
     "*Ответьте на вопрос:* Что хранится в состоянии оптимизатора? Зачем нужно его сохранять? Приведите хотя бы один пример оптимизатора, для которого есть смысл сохранять состояние."
    ]
@@ -526,7 +526,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `Задание 5. Побейте бейзлайн (2+2 балла)`"
+    "## `Задание 4. Логирование в W&B`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "На самом деле это дурной тон логировать обучение нейросети так, как это сделали вы выше.\n",
+    "\n",
+    "Скопируйте и перепишите функции обучения таким образом, чтобы логирование происходило в `weights & biases`.\n",
+    "\n",
+    "*Подсказка.* Изучите официальный туториал https://docs.wandb.ai/tutorials/pytorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code is here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `Задание 5. Побейте бейзлайн (2 балла)`"
    ]
   },
   {
@@ -547,6 +574,31 @@
    "source": [
     "# your code is here"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `Задание 6. Свёрточные сети`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "На датасете [`CIFAR-10`](https://pytorch.org/vision/0.8/datasets.html#torchvision.datasets.CIFAR10) обучите модель, которая выдает аккураси `>=0.7` (2 балла) и аккураси `>=0.8` (ещё 2 балла).\n",
+    "- Используйте код, который вы написали выше\n",
+    "- За структурированный отчет в виде описания проделанной работы доп баллы\n",
+    "\n",
+    "*Подсказка.* Тут вам точно пригодятся [свёрточные слои](https://pytorch.org/docs/stable/generated/torch.nn.Conv2d.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
