rename sem_1 -> sem_2

--- a/day_2/sem_2.ipynb
+++ b/day_2/sem_2.ipynb
@@ -547,7 +547,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Segmentation"
+    "## Object Detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating train split: 100%|██████████| 1000/1000 [00:00<00:00, 1769.58 examples/s]\n",
+      "Generating test split: 100%|██████████| 29/29 [00:00<00:00, 3184.91 examples/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['image_id', 'image', 'width', 'height', 'objects'],\n",
+       "        num_rows: 1000\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['image_id', 'image', 'width', 'height', 'objects'],\n",
+       "        num_rows: 29\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "cppe5 = load_dataset(\"cppe-5\")\n",
+    "cppe5"
    ]
   },
   {
