refactor all repo

--- a/day_3/web-dev/seminar.ipynb
+++ b/day_3/web-dev/seminar.ipynb
@@ -1029,7 +1029,7 @@
     "\n",
     "Сбилдим проект:\n",
     "```bash\n",
-    "make llama-server\n",
+    "cmake llama-server\n",
     "```\n",
     "\n",
     "Скачаем веса модели:\n",
