--- a/day_3/word_embedding.ipynb
+++ b/day_3/word_embedding.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `Занятие 3.2: Эмбединги слов`\n",
+    "\n",
+    "#### `Сириус, смена \"Алгоритмы и анализ данных\" 2024`\n",
+    "\n",
+    "#### `Алексеев Илья, ММП ВМК МГУ`\n",
+    "\n",
+    "За основу взято [домашнее задание](https://github.com/nguynking/CS224N/blob/main/assignment1/code/exploring_word_vectors_22_23.ipynb) из курса CS224N Stanford NLP."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
