add illustrations to iris notebooks

--- a/day_1/iris_classification.ipynb
+++ b/day_1/iris_classification.ipynb
@@ -21,8 +21,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 1. Импорт библиотек\n",
-        "\n",
+        "## 1. Импорт библиотек\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Начнем с импорта необходимых библиотек для работы с данными и визуализации:\n"
       ]
     },
@@ -56,8 +61,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 2. Загрузка данных\n",
-        "\n",
+        "## 2. Загрузка данных\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Датасет Iris - это классический набор данных, который содержит информацию о 150 цветках ириса трех разных видов:\n",
         "- **Iris Setosa** (Ирис щетинистый)\n",
         "- **Iris Versicolor** (Ирис разноцветный)\n",
@@ -67,7 +77,7 @@
         "1. Длина чашелистика (sepal length)\n",
         "2. Ширина чашелистика (sepal width)\n",
         "3. Длина лепестка (petal length)\n",
-        "4. Ширина лепестка (petal width)\n"
+        "4. Ширина лепестка (petal width)"
       ]
     },
     {
@@ -157,9 +167,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 3. Визуализация данных\n",
-        "\n",
-        "Визуализация помогает лучше понять данные и увидеть закономерности. Давайте посмотрим на наши данные с разных сторон!\n"
+        "## 3. Визуализация данных\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Визуализация помогает лучше понять данные и увидеть закономерности. Давайте посмотрим на наши данные с разных сторон!"
       ]
     },
     {
@@ -347,8 +362,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4. Подготовка данных для обучения\n",
-        "\n",
+        "## 4. Подготовка данных для обучения"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Разделим данные на:\n",
         "- **Обучающую выборку** (train) - на ней модель будет учиться\n",
         "- **Тестовую выборку** (test) - на ней проверим качество обучения\n",
@@ -388,14 +408,23 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 5. Метод K-ближайших соседей (KNN)\n",
-        "\n",
+        "## 5. Метод K-ближайших соседей (KNN)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### Как работает KNN?\n",
         "\n",
         "KNN - это очень простой и интуитивный алгоритм:\n",
         "1. Для нового объекта находим K ближайших соседей из обучающей выборки\n",
         "2. Смотрим, к какому классу относится большинство из этих соседей\n",
         "3. Присваиваем новому объекту этот класс\n",
+        "\n",
+        "<div style=\"text-align:center\">\n",
+        "    <img src=\"figures/knn.png\" width=\"500\"/>\n",
+        "</div>\n",
         "\n",
         "### Математика KNN\n",
         "\n",
@@ -515,14 +544,24 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 6. Логистическая регрессия\n",
-        "\n",
+        "## 6. Логистическая регрессия"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### Как работает логистическая регрессия?\n",
         "\n",
         "Логистическая регрессия - это линейный классификатор, который:\n",
         "1. Вычисляет линейную комбинацию признаков\n",
         "2. Применяет **сигмоидную функцию** для получения вероятности класса\n",
         "3. Выбирает класс с наибольшей вероятностью\n",
+        "\n",
+        "\n",
+        "<div style=\"text-align:center\">\n",
+        "    <img src=\"figures/logistic-regression.png\" width=\"500\"/>\n",
+        "</div>\n",
         "\n",
         "### Математика логистической регрессии\n",
         "\n",
@@ -614,6 +653,15 @@
       "metadata": {},
       "source": [
         "### Обучение и тестирование логистической регрессии\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<div style=\"text-align:center\">\n",
+        "    <img src=\"figures/gradient-descent.gif\" width=\"500\"/>\n",
+        "</div>"
       ]
     },
     {
