add figures to diabetes

--- a/day_1/diabetes_regression.ipynb
+++ b/day_1/diabetes_regression.ipynb
@@ -55,8 +55,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 2. Загрузка данных\n",
-        "\n",
+        "## 2. Загрузка данных"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Датасет Diabetes содержит информацию о 442 пациентах с диабетом. Для каждого пациента измерено 10 признаков:\n",
         "\n",
         "1. **age** - возраст\n",
@@ -171,9 +176,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 3. Визуализация данных\n",
-        "\n",
-        "Визуализация поможет нам понять распределение данных и связи между признаками и целевой переменной.\n"
+        "## 3. Визуализация данных\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Визуализация поможет нам понять распределение данных и связи между признаками и целевой переменной."
       ]
     },
     {
@@ -353,9 +363,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4. Подготовка данных для обучения\n",
-        "\n",
-        "Разделим данные на обучающую и тестовую выборки:\n"
+        "## 4. Подготовка данных для обучения\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Разделим данные на обучающую и тестовую выборки:"
       ]
     },
     {
@@ -390,8 +405,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 5. Линейная регрессия\n",
-        "\n",
+        "## 5. Линейная регрессия"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### Как работает линейная регрессия?\n",
         "\n",
         "Линейная регрессия - это один из самых простых и популярных методов машинного обучения. Идея:\n",
@@ -463,6 +483,15 @@
       "metadata": {},
       "source": [
         "### Обучение и тестирование линейной регрессии\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<div style=\"text-align:center\">\n",
+        "    <img src=\"figures/gradient-descent.gif\" width=\"500\"/>\n",
+        "</div>"
       ]
     },
     {
@@ -678,10 +707,20 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 7. K-ближайших соседей для регрессии (KNN Regression)\n",
-        "\n",
-        "До этого мы использовали линейную регрессию, которая предполагает линейную зависимость между признаками и целевой переменной. Теперь познакомимся с **методом K-ближайших соседей (KNN)**, который может улавливать более сложные, нелинейные зависимости.\n",
-        "\n",
+        "## 7. K-ближайших соседей для регрессии (KNN Regression)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "До этого мы использовали линейную регрессию, которая предполагает линейную зависимость между признаками и целевой переменной. Теперь познакомимся с **методом K-ближайших соседей (KNN)**, который может улавливать более сложные, нелинейные зависимости."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### 7.1 Как работает KNN для регрессии?\n",
         "\n",
         "**Идея метода очень простая:**\n",
@@ -690,6 +729,10 @@
         "1. Находим K самых **похожих** (ближайших) объектов из обучающей выборки\n",
         "2. Берем **среднее значение** их целевой переменной\n",
         "3. Это среднее и будет предсказанием\n",
+        "\n",
+        "<div style=\"text-align:center\">\n",
+        "    <img src=\"figures/knn-regression.png\" width=\"500\"/>\n",
+        "</div>\n",
         "\n",
         "**Математически:**\n",
         "\n",
