add illustration to titanic

--- a/day_1/titanic_eda.ipynb
+++ b/day_1/titanic_eda.ipynb
@@ -653,11 +653,25 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 5. Feature Engineering (Создание признаков)\n",
-        "\n",
+        "## 5. Feature Engineering (Создание признаков)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Feature Engineering - это создание новых признаков из существующих для улучшения качества модели.\n",
         "\n",
-        "### 5.1 Создание признака FamilySize (размер семьи)\n"
+        "<div style=\"text-align: center\">\n",
+        "    <img src=\"figures/ml-geometry.png\" width=\"700\"/>\n",
+        "</div>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 5.1 Создание признака FamilySize (размер семьи)"
       ]
     },
     {
