--- a/day_3/text_classification.ipynb
+++ b/day_3/text_classification.ipynb
@@ -44,7 +44,7 @@
       "source": [
         "# Библиотеки для работы с данными\n",
         "import pandas as pd\n",
-        "\n",
+        "import numpy as np\n",
         "\n",
         "# Библиотеки для визуализации\n",
         "import matplotlib.pyplot as plt\n",
@@ -100,13 +100,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Скачиваем датасет с Google Drive\n",
-        "# !gdown \"https://drive.google.com/uc?id=1a-O_gckKyVRQPF5RhBxo-RnZBEGpezE0\"\n",
-        "# !unzip -q data_toxic.zip\n"
+        "!gdown \"https://drive.google.com/uc?id=1a-O_gckKyVRQPF5RhBxo-RnZBEGpezE0\"\n",
+        "!unzip -q data_toxic.zip\n"
       ]
     },
     {
@@ -606,87 +606,8 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 5. Векторизация текста\n",
-        "\n",
-        "Модели машинного обучения работают с числами, а не с текстом. Нужно превратить текст в числовые векторы!\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "**Векторизация подсчетом** (count vectorizer) - самый простой способ векторизации:\n",
-        "1. Создаем словарь всех уникальных слов\n",
-        "2. Для каждого документа считаем, сколько раз встретилось каждое слово\n",
-        "\n",
-        "**Пример:**\n",
-        "- Документ 1: \"I love cats\"\n",
-        "- Документ 2: \"I love dogs\"\n",
-        "- Словарь: [\"I\", \"love\", \"cats\", \"dogs\"]\n",
-        "- Вектор 1: [1, 1, 1, 0]\n",
-        "- Вектор 2: [1, 1, 0, 1]\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 12,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "📚 Словарь (vocabulary):\n",
-            "['awesome' 'deep' 'is' 'learning' 'love' 'machine']\n",
-            "\n",
-            "📊 Векторы (матрица):\n",
-            "[[0 0 0 1 1 1]\n",
-            " [0 1 0 1 1 0]\n",
-            " [1 0 1 1 0 1]]\n",
-            "\n",
-            "📋 В виде таблицы:\n",
-            "       awesome  deep  is  learning  love  machine\n",
-            "Doc 1        0     0   0         1     1        1\n",
-            "Doc 2        0     1   0         1     1        0\n",
-            "Doc 3        1     0   1         1     0        1\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Простой пример CountVectorizer\n",
-        "simple_texts = [\n",
-        "    \"I love machine learning\",\n",
-        "    \"I love deep learning\",\n",
-        "    \"Machine learning is awesome\"\n",
-        "]\n",
-        "\n",
-        "simple_vectorizer = CountVectorizer()\n",
-        "simple_vectors = simple_vectorizer.fit_transform(simple_texts)\n",
-        "\n",
-        "# Показываем словарь\n",
-        "print(\"📚 Словарь (vocabulary):\")\n",
-        "print(simple_vectorizer.get_feature_names_out())\n",
-        "\n",
-        "# Показываем векторы\n",
-        "print(\"\\n📊 Векторы (матрица):\")\n",
-        "print(simple_vectors.toarray())\n",
-        "\n",
-        "# Создаем красивую таблицу\n",
-        "df_example = pd.DataFrame(\n",
-        "    simple_vectors.toarray(),\n",
-        "    columns=simple_vectorizer.get_feature_names_out(),\n",
-        "    index=[f\"Doc {i+1}\" for i in range(len(simple_texts))]\n",
-        ")\n",
-        "print(\"\\n📋 В виде таблицы:\")\n",
-        "print(df_example)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -729,7 +650,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -766,7 +687,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -827,7 +748,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -929,7 +850,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -978,7 +899,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -1018,7 +939,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -1065,6 +986,57 @@
         "где $w_i$ - вес слова, $x_i$ - количество (или TF-IDF) слова в документе.\n",
         "\n",
         "Если Score > 0 → комментарий токсичный, иначе → нетоксичный.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def predict(text: str) -> None:\n",
+        "    vectorized = count_vectorizer.transform([text])\n",
+        "    predicted = model_count.predict_proba(vectorized)\n",
+        "    logit = predicted[:, -1][0]\n",
+        "    prob = 1 / (1 + np.exp(-logit))\n",
+        "    print(f\"Степень токсичности: {prob}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "3x hate\n",
+            "Степень токсичности: 0.7273153901196082\n",
+            "\n",
+            "2x hate + thank\n",
+            "Степень токсичности: 0.662397671047921\n",
+            "Степень токсичности: 0.662397671047921\n",
+            "Степень токсичности: 0.662397671047921\n",
+            "\n",
+            "hate + 2x thank\n",
+            "Степень токсичности: 0.519062945578901\n",
+            "Степень токсичности: 0.519062945578901\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"3x hate\")\n",
+        "predict(\"hate hate hate\")\n",
+        "\n",
+        "print(\"\\n2x hate + thank\")\n",
+        "predict(\"thank hate hate\")\n",
+        "predict(\"hate thank hate\")\n",
+        "predict(\"hate hate thank\")\n",
+        "\n",
+        "print(\"\\nhate + 2x thank\")\n",
+        "predict(\"thank thank hate\")\n",
+        "predict(\"hate thank thank\")"
       ]
     },
     {
