--- a/day_1/diabetes_regression.ipynb
+++ b/day_1/diabetes_regression.ipynb
@@ -87,23 +87,139 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Первые 5 строк датасета:\n",
-            "        age       sex       bmi        bp        s1        s2        s3  \\\n",
-            "0  0.038076  0.050680  0.061696  0.021872 -0.044223 -0.034821 -0.043401   \n",
-            "1 -0.001882 -0.044642 -0.051474 -0.026328 -0.008449 -0.019163  0.074412   \n",
-            "2  0.085299  0.050680  0.044451 -0.005670 -0.045599 -0.034194 -0.032356   \n",
-            "3 -0.089063 -0.044642 -0.011595 -0.036656  0.012191  0.024991 -0.036038   \n",
-            "4  0.005383 -0.044642 -0.036385  0.021872  0.003935  0.015596  0.008142   \n",
             "\n",
-            "         s4        s5        s6  target  \n",
-            "0 -0.002592  0.019907 -0.017646   151.0  \n",
-            "1 -0.039493 -0.068332 -0.092204    75.0  \n",
-            "2 -0.002592  0.002861 -0.025930   141.0  \n",
-            "3  0.034309  0.022688 -0.009362   206.0  \n",
-            "4 -0.002592 -0.031988 -0.046641   135.0  \n",
-            "\n",
-            "Размер датасета: 442 пациентов, 10 признаков\n"
+            "Размер датасета: 442 пациентов, 10 признаков\n",
+            "Первые 5 строк датасета:\n"
           ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>age</th>\n",
+              "      <th>sex</th>\n",
+              "      <th>bmi</th>\n",
+              "      <th>bp</th>\n",
+              "      <th>s1</th>\n",
+              "      <th>s2</th>\n",
+              "      <th>s3</th>\n",
+              "      <th>s4</th>\n",
+              "      <th>s5</th>\n",
+              "      <th>s6</th>\n",
+              "      <th>target</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0.038076</td>\n",
+              "      <td>0.050680</td>\n",
+              "      <td>0.061696</td>\n",
+              "      <td>0.021872</td>\n",
+              "      <td>-0.044223</td>\n",
+              "      <td>-0.034821</td>\n",
+              "      <td>-0.043401</td>\n",
+              "      <td>-0.002592</td>\n",
+              "      <td>0.019907</td>\n",
+              "      <td>-0.017646</td>\n",
+              "      <td>151.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>-0.001882</td>\n",
+              "      <td>-0.044642</td>\n",
+              "      <td>-0.051474</td>\n",
+              "      <td>-0.026328</td>\n",
+              "      <td>-0.008449</td>\n",
+              "      <td>-0.019163</td>\n",
+              "      <td>0.074412</td>\n",
+              "      <td>-0.039493</td>\n",
+              "      <td>-0.068332</td>\n",
+              "      <td>-0.092204</td>\n",
+              "      <td>75.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>0.085299</td>\n",
+              "      <td>0.050680</td>\n",
+              "      <td>0.044451</td>\n",
+              "      <td>-0.005670</td>\n",
+              "      <td>-0.045599</td>\n",
+              "      <td>-0.034194</td>\n",
+              "      <td>-0.032356</td>\n",
+              "      <td>-0.002592</td>\n",
+              "      <td>0.002861</td>\n",
+              "      <td>-0.025930</td>\n",
+              "      <td>141.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>-0.089063</td>\n",
+              "      <td>-0.044642</td>\n",
+              "      <td>-0.011595</td>\n",
+              "      <td>-0.036656</td>\n",
+              "      <td>0.012191</td>\n",
+              "      <td>0.024991</td>\n",
+              "      <td>-0.036038</td>\n",
+              "      <td>0.034309</td>\n",
+              "      <td>0.022688</td>\n",
+              "      <td>-0.009362</td>\n",
+              "      <td>206.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0.005383</td>\n",
+              "      <td>-0.044642</td>\n",
+              "      <td>-0.036385</td>\n",
+              "      <td>0.021872</td>\n",
+              "      <td>0.003935</td>\n",
+              "      <td>0.015596</td>\n",
+              "      <td>0.008142</td>\n",
+              "      <td>-0.002592</td>\n",
+              "      <td>-0.031988</td>\n",
+              "      <td>-0.046641</td>\n",
+              "      <td>135.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        age       sex       bmi        bp        s1        s2        s3  \\\n",
+              "0  0.038076  0.050680  0.061696  0.021872 -0.044223 -0.034821 -0.043401   \n",
+              "1 -0.001882 -0.044642 -0.051474 -0.026328 -0.008449 -0.019163  0.074412   \n",
+              "2  0.085299  0.050680  0.044451 -0.005670 -0.045599 -0.034194 -0.032356   \n",
+              "3 -0.089063 -0.044642 -0.011595 -0.036656  0.012191  0.024991 -0.036038   \n",
+              "4  0.005383 -0.044642 -0.036385  0.021872  0.003935  0.015596  0.008142   \n",
+              "\n",
+              "         s4        s5        s6  target  \n",
+              "0 -0.002592  0.019907 -0.017646   151.0  \n",
+              "1 -0.039493 -0.068332 -0.092204    75.0  \n",
+              "2 -0.002592  0.002861 -0.025930   141.0  \n",
+              "3  0.034309  0.022688 -0.009362   206.0  \n",
+              "4 -0.002592 -0.031988 -0.046641   135.0  "
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -115,9 +231,9 @@
         "df['target'] = diabetes.target\n",
         "\n",
         "# Посмотрим на первые строки\n",
+        "print(f\"\\nРазмер датасета: {df.shape[0]} пациентов, {df.shape[1]-1} признаков\")\n",
         "print(\"Первые 5 строк датасета:\")\n",
-        "print(df.head())\n",
-        "print(f\"\\nРазмер датасета: {df.shape[0]} пациентов, {df.shape[1]-1} признаков\")\n"
+        "df.head()\n"
       ]
     },
     {
@@ -129,47 +245,201 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Статистика по признакам и целевой переменной:\n",
-            "                age           sex           bmi            bp            s1  \\\n",
-            "count  4.420000e+02  4.420000e+02  4.420000e+02  4.420000e+02  4.420000e+02   \n",
-            "mean  -2.511817e-19  1.230790e-17 -2.245564e-16 -4.797570e-17 -1.381499e-17   \n",
-            "std    4.761905e-02  4.761905e-02  4.761905e-02  4.761905e-02  4.761905e-02   \n",
-            "min   -1.072256e-01 -4.464164e-02 -9.027530e-02 -1.123988e-01 -1.267807e-01   \n",
-            "25%   -3.729927e-02 -4.464164e-02 -3.422907e-02 -3.665608e-02 -3.424784e-02   \n",
-            "50%    5.383060e-03 -4.464164e-02 -7.283766e-03 -5.670422e-03 -4.320866e-03   \n",
-            "75%    3.807591e-02  5.068012e-02  3.124802e-02  3.564379e-02  2.835801e-02   \n",
-            "max    1.107267e-01  5.068012e-02  1.705552e-01  1.320436e-01  1.539137e-01   \n",
-            "\n",
-            "                 s2            s3            s4            s5            s6  \\\n",
-            "count  4.420000e+02  4.420000e+02  4.420000e+02  4.420000e+02  4.420000e+02   \n",
-            "mean   3.918434e-17 -5.777179e-18 -9.042540e-18  9.293722e-17  1.130318e-17   \n",
-            "std    4.761905e-02  4.761905e-02  4.761905e-02  4.761905e-02  4.761905e-02   \n",
-            "min   -1.156131e-01 -1.023071e-01 -7.639450e-02 -1.260971e-01 -1.377672e-01   \n",
-            "25%   -3.035840e-02 -3.511716e-02 -3.949338e-02 -3.324559e-02 -3.317903e-02   \n",
-            "50%   -3.819065e-03 -6.584468e-03 -2.592262e-03 -1.947171e-03 -1.077698e-03   \n",
-            "75%    2.984439e-02  2.931150e-02  3.430886e-02  3.243232e-02  2.791705e-02   \n",
-            "max    1.987880e-01  1.811791e-01  1.852344e-01  1.335973e-01  1.356118e-01   \n",
-            "\n",
-            "           target  \n",
-            "count  442.000000  \n",
-            "mean   152.133484  \n",
-            "std     77.093005  \n",
-            "min     25.000000  \n",
-            "25%     87.000000  \n",
-            "50%    140.500000  \n",
-            "75%    211.500000  \n",
-            "max    346.000000  \n",
-            "\n",
-            "⚠️ Внимание: признаки в этом датасете уже нормализованы (среднее=0, стандартное отклонение≈0.05)\n"
+            "Статистика по признакам и целевой переменной:\n"
           ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>age</th>\n",
+              "      <th>sex</th>\n",
+              "      <th>bmi</th>\n",
+              "      <th>bp</th>\n",
+              "      <th>s1</th>\n",
+              "      <th>s2</th>\n",
+              "      <th>s3</th>\n",
+              "      <th>s4</th>\n",
+              "      <th>s5</th>\n",
+              "      <th>s6</th>\n",
+              "      <th>target</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>4.420000e+02</td>\n",
+              "      <td>4.420000e+02</td>\n",
+              "      <td>4.420000e+02</td>\n",
+              "      <td>4.420000e+02</td>\n",
+              "      <td>4.420000e+02</td>\n",
+              "      <td>4.420000e+02</td>\n",
+              "      <td>4.420000e+02</td>\n",
+              "      <td>4.420000e+02</td>\n",
+              "      <td>4.420000e+02</td>\n",
+              "      <td>4.420000e+02</td>\n",
+              "      <td>442.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>-2.511817e-19</td>\n",
+              "      <td>1.230790e-17</td>\n",
+              "      <td>-2.245564e-16</td>\n",
+              "      <td>-4.797570e-17</td>\n",
+              "      <td>-1.381499e-17</td>\n",
+              "      <td>3.918434e-17</td>\n",
+              "      <td>-5.777179e-18</td>\n",
+              "      <td>-9.042540e-18</td>\n",
+              "      <td>9.293722e-17</td>\n",
+              "      <td>1.130318e-17</td>\n",
+              "      <td>152.133484</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>4.761905e-02</td>\n",
+              "      <td>4.761905e-02</td>\n",
+              "      <td>4.761905e-02</td>\n",
+              "      <td>4.761905e-02</td>\n",
+              "      <td>4.761905e-02</td>\n",
+              "      <td>4.761905e-02</td>\n",
+              "      <td>4.761905e-02</td>\n",
+              "      <td>4.761905e-02</td>\n",
+              "      <td>4.761905e-02</td>\n",
+              "      <td>4.761905e-02</td>\n",
+              "      <td>77.093005</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>-1.072256e-01</td>\n",
+              "      <td>-4.464164e-02</td>\n",
+              "      <td>-9.027530e-02</td>\n",
+              "      <td>-1.123988e-01</td>\n",
+              "      <td>-1.267807e-01</td>\n",
+              "      <td>-1.156131e-01</td>\n",
+              "      <td>-1.023071e-01</td>\n",
+              "      <td>-7.639450e-02</td>\n",
+              "      <td>-1.260971e-01</td>\n",
+              "      <td>-1.377672e-01</td>\n",
+              "      <td>25.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>-3.729927e-02</td>\n",
+              "      <td>-4.464164e-02</td>\n",
+              "      <td>-3.422907e-02</td>\n",
+              "      <td>-3.665608e-02</td>\n",
+              "      <td>-3.424784e-02</td>\n",
+              "      <td>-3.035840e-02</td>\n",
+              "      <td>-3.511716e-02</td>\n",
+              "      <td>-3.949338e-02</td>\n",
+              "      <td>-3.324559e-02</td>\n",
+              "      <td>-3.317903e-02</td>\n",
+              "      <td>87.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>5.383060e-03</td>\n",
+              "      <td>-4.464164e-02</td>\n",
+              "      <td>-7.283766e-03</td>\n",
+              "      <td>-5.670422e-03</td>\n",
+              "      <td>-4.320866e-03</td>\n",
+              "      <td>-3.819065e-03</td>\n",
+              "      <td>-6.584468e-03</td>\n",
+              "      <td>-2.592262e-03</td>\n",
+              "      <td>-1.947171e-03</td>\n",
+              "      <td>-1.077698e-03</td>\n",
+              "      <td>140.500000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>3.807591e-02</td>\n",
+              "      <td>5.068012e-02</td>\n",
+              "      <td>3.124802e-02</td>\n",
+              "      <td>3.564379e-02</td>\n",
+              "      <td>2.835801e-02</td>\n",
+              "      <td>2.984439e-02</td>\n",
+              "      <td>2.931150e-02</td>\n",
+              "      <td>3.430886e-02</td>\n",
+              "      <td>3.243232e-02</td>\n",
+              "      <td>2.791705e-02</td>\n",
+              "      <td>211.500000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>1.107267e-01</td>\n",
+              "      <td>5.068012e-02</td>\n",
+              "      <td>1.705552e-01</td>\n",
+              "      <td>1.320436e-01</td>\n",
+              "      <td>1.539137e-01</td>\n",
+              "      <td>1.987880e-01</td>\n",
+              "      <td>1.811791e-01</td>\n",
+              "      <td>1.852344e-01</td>\n",
+              "      <td>1.335973e-01</td>\n",
+              "      <td>1.356118e-01</td>\n",
+              "      <td>346.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                age           sex           bmi            bp            s1  \\\n",
+              "count  4.420000e+02  4.420000e+02  4.420000e+02  4.420000e+02  4.420000e+02   \n",
+              "mean  -2.511817e-19  1.230790e-17 -2.245564e-16 -4.797570e-17 -1.381499e-17   \n",
+              "std    4.761905e-02  4.761905e-02  4.761905e-02  4.761905e-02  4.761905e-02   \n",
+              "min   -1.072256e-01 -4.464164e-02 -9.027530e-02 -1.123988e-01 -1.267807e-01   \n",
+              "25%   -3.729927e-02 -4.464164e-02 -3.422907e-02 -3.665608e-02 -3.424784e-02   \n",
+              "50%    5.383060e-03 -4.464164e-02 -7.283766e-03 -5.670422e-03 -4.320866e-03   \n",
+              "75%    3.807591e-02  5.068012e-02  3.124802e-02  3.564379e-02  2.835801e-02   \n",
+              "max    1.107267e-01  5.068012e-02  1.705552e-01  1.320436e-01  1.539137e-01   \n",
+              "\n",
+              "                 s2            s3            s4            s5            s6  \\\n",
+              "count  4.420000e+02  4.420000e+02  4.420000e+02  4.420000e+02  4.420000e+02   \n",
+              "mean   3.918434e-17 -5.777179e-18 -9.042540e-18  9.293722e-17  1.130318e-17   \n",
+              "std    4.761905e-02  4.761905e-02  4.761905e-02  4.761905e-02  4.761905e-02   \n",
+              "min   -1.156131e-01 -1.023071e-01 -7.639450e-02 -1.260971e-01 -1.377672e-01   \n",
+              "25%   -3.035840e-02 -3.511716e-02 -3.949338e-02 -3.324559e-02 -3.317903e-02   \n",
+              "50%   -3.819065e-03 -6.584468e-03 -2.592262e-03 -1.947171e-03 -1.077698e-03   \n",
+              "75%    2.984439e-02  2.931150e-02  3.430886e-02  3.243232e-02  2.791705e-02   \n",
+              "max    1.987880e-01  1.811791e-01  1.852344e-01  1.335973e-01  1.356118e-01   \n",
+              "\n",
+              "           target  \n",
+              "count  442.000000  \n",
+              "mean   152.133484  \n",
+              "std     77.093005  \n",
+              "min     25.000000  \n",
+              "25%     87.000000  \n",
+              "50%    140.500000  \n",
+              "75%    211.500000  \n",
+              "max    346.000000  "
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
         "# Базовая статистика\n",
         "print(\"Статистика по признакам и целевой переменной:\")\n",
-        "print(df.describe())\n",
-        "\n",
-        "print(\"\\n⚠️ Внимание: признаки в этом датасете уже нормализованы (среднее=0, стандартное отклонение≈0.05)\")\n"
+        "df.describe()\n"
       ]
     },
     {
@@ -766,7 +1036,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -810,7 +1080,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -852,7 +1122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -959,7 +1229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
